# ml_prec

./: .gitattributes  .gitignore  .local_vimrc  Makefile.am  README  configure.ac  preconf
config/: config.h.in
include/: blas.h  define.h  exception.h  fortran.h  logger.h  svector.h  time.h  tools.h  uvector.h
m4/: acx_blas.m4  ax_blas.m4
modules/: Makefile.am  matrix  vector
modules/common/: common.cc  common.h  config.cc
modules/config_file/: config_file.cc  config_file.h
modules/matrix/: csrmatrix.cc  dmatrix.cc  fv_sparse_matrix.cc  mapmatrix.cc  matrix.h  skyline.cc  sparse_matrix.cc
modules/mesh/: mesh.h  spe.cc
modules/prec/: amg.cc  prec.cc  prec.h  prec_base.h  prec_misc.cc  prec_solve.cc
modules/prec/amg/: amg.cc  amg_prec.cc  amg_prec.h
modules/prec/bgs/: bgs.cc  bgs_prec.cc  bgs_prec.h
modules/prec/cheb/: cheb_constr.cc  cheb_mark.cc  cheb_misc.cc  cheb_misc.h  cheb_prec.h  cheb_solve.cc
modules/prec/composite/: composite.cc  composite_prec.cc  composite_prec.h
modules/prec/diag/: diag.cc  diag.h  diag_prec.cc  diag_prec.h
modules/prec/gs/: gs.cc  gs_prec.cc  gs_prec.h
modules/prec/id/: id_prec.h
modules/prec/misc/: misc.cc  misc.h  sparse_lu.cc
modules/prec/multi_split/: multi_split_constr.cc  multi_split_mark.cc  multi_split_misc.cc  multi_split_misc.h  multi_split_prec.h  multi_split_solve.cc
modules/prec/rbgs/: rbgs.cc  rbgs_prec.cc  rbgs_prec.h
modules/prec/relax/: rel_constr.cc  rel_misc.cc  rel_prec.h  rel_solve.cc
modules/prec/sym/: sym.cc  sym.h  sym_prec.cc  sym_prec.h
modules/solvers/: amg1r6.f  cg.cc  cheb.cc  gmres.cc  pcg.cc  simple_solver.cc  solvers.cc  solvers.h  umfpack.cc
modules/vector/: blas.cc  svector.cc  vector.cc  vector.h
project/: 2level.py  Makefile.am  analysis.cc  analysis.m  batch.sh  batch1.sh  config.h  convert.cc  hypre.cc  image.py  log4cxx.properties  main.cc  main.h  main_fading.cc  main_helper.cc  msplit.cfg  norm.py  prec_multi_split_example.cfg  process.sh  run.sh  transform.cc
project/fading/: image.py
tools/: Makefile.am  check_memory.sh
tools/check_memory/: Makefile.am  check_memory.c  proc.c  proc.h
tools/mesh_converter/: mesh_converter.c
tools/python/: cmap_tools.py  heatmap.py  histogramm.py  values
