AM_CPPFLAGS = -I$(top_srcdir)

noinst_LIBRARIES = libmodules.a
libmodules_a_SOURCES = \
		       matrix/csrmatrix.cc \
		       matrix/skyline.cc \
		       matrix/matrix.h \
		       vector/blas.cc \
		       vector/vector.cc \
		       vector/vector.h \
		       mesh/spe.cc \
		       mesh/mesh.h \
		       common/common.cc \
		       common/config.cc \
		       common/common.h \
		       prec/cheb/cheb_constr.cc \
		       prec/cheb/cheb_misc.cc \
		       prec/cheb/cheb_solve.cc \
		       prec/cheb/cheb_misc.h \
		       prec/cheb/cheb_prec.h \
		       prec/amg/amg.cc \
		       prec/amg/amg_prec.h \
		       prec/diag/diag.cc \
		       prec/diag/diag.h \
		       prec/misc/misc.cc \
		       prec/misc/misc.h \
		       prec/prec_base.h \
		       solvers/pcg.cc \
		       solvers/cheb.cc \
		       solvers/simple_solver.cc \
		       solvers/amg1r6.f \
		       solvers/solvers.cc \
		       solvers/solvers.h
